--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Arya Designs</title>
+  </head>
+  <body style="font-family: Arial; padding:40px;">
+    <h1>Arya Designs is LIVE ✅</h1>
+    <p>If you can see this, GitHub Pages is working correctly.</p>
+  </body>
+</html>
