--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <main>
     <!-- =========================
-         HERO (UI/UX like reference)
+         HERO (CLEAN + CTA FORWARD)
          ========================= -->
     <section class="container section" style="margin-top:32px;">
       <div class="card hero hero--split">
@@ -56,30 +56,24 @@
             From renovations to new builds, we bring your vision to technical life.
           </p>
 
+          <!-- Primary CTA (ONLY 2 buttons) -->
           <div class="hero__cta">
             <a class="btn btn--primary" href="#contact">Get a Free Quote</a>
             <a class="btn btn--ghost" href="#portfolio">View Our Work</a>
           </div>
 
-          <div class="hero__meta" style="margin-top:14px;">
-            <span class="meta-pill">Fast turnaround</span>
-            <span class="meta-pill">Council-ready drawings</span>
-            <span class="meta-pill">Revisions included</span>
+          <!-- Clean trust line + email -->
+          <div class="hero__subcta">
+            <span class="trust">Council-ready • Fast turnaround • Revisions included</span>
+            <span class="dot">•</span>
+            <a class="muted-link" href="mailto:aryadesignsaus@gmail.com">aryadesignsaus@gmail.com</a>
           </div>
 
-          <p class="muted" style="margin-top:12px;">
-            Prefer email? <a href="mailto:aryadesignsaus@gmail.com"><b>aryadesignsaus@gmail.com</b></a>
-          </p>
-
-          <div class="hero__meta" style="margin-top:14px;">
-            <span class="meta-pill"><b>100%</b> Council compliance focus</span>
-            <span class="meta-pill">Australia wide</span>
-            <span class="meta-pill">Builders + Homeowners</span>
-          </div>
-
-          <div class="hero__cta" style="margin-top:14px;">
-            <a class="btn btn--ghost" href="tel:0472611972">Call 0472 611 972</a>
-            <a class="btn btn--ghost" target="_blank" rel="noopener" href="https://wa.me/61472611972">WhatsApp</a>
+          <!-- Small secondary actions (optional but clean) -->
+          <div class="hero__mini">
+            <a class="mini-link" href="tel:0472611972">Call 0472 611 972</a>
+            <span class="dot">•</span>
+            <a class="mini-link" target="_blank" rel="noopener" href="https://wa.me/61472611972">WhatsApp</a>
           </div>
         </div>
 
